# monde

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  tasks.py
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
schemas/: Empty.xlsx
schemas/example/: FinancialSample.xlsx
src/monde/: __init__.py  dataframe.py  series.py  utils.py
src/monde/schema/: __init__.py  utils.py
src/monde/schema/builders/: __init__.py  abstract.py  pandera.py  pydantic.py  sqlalchemy.py
src/monde/schema/io/: __init__.py  sql.py  xlsx.py  yaml.py
src/monde/schema/registry/: __init__.py  abstract.py  exceptions.py  local.py  s3.py
src/monde/schema/spec/: __init__.py  field.py  schema.py
src/monde/transform/: __init__.py  abstract.py  memory.py  mixins.py  pipeline.py  protected.py  simple.py  subframe.py  validator.py
tests/: __init__.py  conftest.py
tests/data/: has_subframes.xlsx
tests/schema/: conftest.py  test_read.py  test_registry.py  test_usage.py
tests/schema/builders/pandera/: test_dtypes.py
tests/transform/: test_simple.py  test_subframe.py  test_validator.py
