[project]
name = "monde"
version = "0.1.0"
description = "Data transformation tooling to make data engineering easier."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "numpy>=2.4.0",
    "pandas[excel,pyarrow]>=2.3.3",
    "pandera>=0.27.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "s3fs>=2025.12.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "build>=1.3.0",
    "coverage>=7.13.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "invoke>=2.2.1",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest<8",
    "pytest-cov>=7.0.0",
    "pytest-subtests>=0.15.0",
    "setuptools>=80.9.0",
    "types-python-dateutil>=2.9.0.20251115",
    "types-pyyaml>=6.0.12.20250915",
    "wheel>=0.45.1",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "B"]

# E401: multiple imports on one line
# E501: line too long (82 > 79 characters)
# E701: multiple statements on one line (colon)
# E702: multiple statements on one line (semicolon)
# E722: do not use bare except, specify exception instead
# E731: do not assign a lambda expression, use a def
# B008: Do not perform function calls in argument defaults.
# B009: Do not call `getattr(x, 'attr')`
# B010: Do not call `setattr(x, 'attr', val)`
# B019: Use of `functools.lru_cache` on methods can lead to memory leaks.
ignore = [
    "E401",
    "E501",
    "E701",
    "E702",
    "E722",
    "E731",
    "B008",
    "B009",
    "B010",
    "B019",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pandas.errors.ParserWarning",
    "ignore::FutureWarning",
]