[build-system]
requires =
    setuptools
build-backend = setuptools.build_meta

[metadata]
name = monde
version = file: VERSION
author = Christian DiMare-Baits
author_email = frndlytm@gmail.com
url = https://github.com/frndlytm/monde
description = Data transformation tooling to make data engineering easier.
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires = file: requirements.txt
test_requires = file: requirements.txt, requirements-test.txt
zip_safe = False

[options.packages.find]
where = src
exclude =
    docs*
    tests*

[options.package_data]
* = *.md